# fwd_dynamics

./: .gitignore  README.md  pose_filt_0.c3d  pose_filt_0.json  pose_filt_0_procdb.json  pyproject.toml  theia_model.mdh  theia_model_segment_masses.json  theia_pitching_signals_reference.md
configs/: default.yaml  markers.yaml
docs/: kinematics_approach.md  m2_kinetics_handoff.md  m2_kinetics_jr_amplifier.md  m2_kinetics_plan.md  m2_kinetics_resolved.md  m2_status.md
docs/experiments/: expA_axis_rotation.md  expC_cardan_sequence.md
scripts/: audit_b2_isolate_actuators.py  audit_b_translational_actuators.py  audit_c_segment_newton_euler.py  audit_d_omega_from_4x4_vs_opensim.py  audit_e_model_bakeoff.py  audit_f_anthropometrics.py  audit_g_com_dempster.py  audit_h2_omega_vs_v3d.py  audit_h2_qdot.py  audit_h3_jr_no_feedback.py  audit_h_inertia.py  audit_i_smoothing_sweep.py  audit_inertial_properties.py  audit_j_axis_alignment.py  audit_k_v3d_per_component.py  audit_l_combined_fix.py  audit_m_v3d_cascaded_filter.py  audit_n_model_bakeoff.py  audit_o_v3d_euler_compare.py  build_cardan_variant.py  build_yroll_variant.py  build_zyz_variant.py  fetch_models.py  fix_a_smooth_arm_coords.py  repro_shoulder_kinetics.py
src/theia_osim/: __init__.py  config.py  constants.py
src/theia_osim/analysis/: __init__.py  body_kin.py  id.py  ik.py  jr.py  scale.py  (+2 more)
tests/: test_c3d_io.py  test_filter.py  test_landmarks.py  test_load_v3d_json.py  test_mdh_parser.py  test_personalize.py  test_recipe_c_quaternion.py  test_scale.py  test_slope.py
v3d_scripts/: 05_determine_side.v3s
(+28 files in other folders)
