[project]
name = "theia-osim"
version = "0.1.0"
description = "Theia3D markerless mocap → OpenSim biomechanics pipeline for baseball pitching"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "opensim>=4.5,<5.0",
    "ezc3d>=1.6.0",
    "numpy>=2.1",
    "scipy>=1.11",
    "pandas>=2.0",
    "pyyaml>=6.0",
    "matplotlib>=3.7",
]

[project.scripts]
theia-osim-trial = "theia_osim.drivers.run_trial:main"

[dependency-groups]
dev = [
    "pytest>=7.4",
    "ruff>=0.4",
    "mypy>=1.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/theia_osim"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "W"]
ignore = ["N806", "N803"]  # allow non-snake-case in biomech contexts (R, T, etc.)

[tool.pytest.ini_options]
testpaths = ["tests"]
